--- a/src/app/pages/articles-list/articles-list.component.html
+++ b/src/app/pages/articles-list/articles-list.component.html
@@ -26,7 +26,9 @@
       <span class="filter-label">Filter by tags:</span>
       <mat-chip-listbox multiple (change)="onTagSelectionChange($any($event.value))">
         @for (tag of availableTags(); track $index) {
-        <mat-chip-option [value]="tag" [selected]="selectedTags().includes(tag)" class="tag-chip">{{ tag
+        <mat-chip-option [value]="tag"
+          [selected]="(selectedTab() === 0 ? selectedDraftTags() : selectedPublishedTags()).includes(tag)"
+          class="tag-chip">{{ tag
           }}</mat-chip-option>
         }
       </mat-chip-listbox>
@@ -47,7 +49,7 @@
   </div>
   } @else if (filteredArticles().length === 0) {
   <div class="empty-state">
-    @if (selectedTags().length > 0) {
+    @if ((selectedTab() === 0 ? selectedDraftTags() : selectedPublishedTags()).length > 0) {
     <mat-icon>filter_list_off</mat-icon>
     <h2>No articles found with selected tags</h2>
     <p>Try clearing the filter or selecting different tags.</p>
@@ -99,7 +101,7 @@
             </button>
           </div>
 
-          <p class="article-summary">{{ article.summary }}</p>
+          <!-- <p class="article-summary">{{ article.summary }}</p> -->
 
           @if (article.tags.length > 0) {
           <div class="article-tags">
@@ -116,6 +118,13 @@
               <mat-icon>edit</mat-icon>
               {{ selectedTab() === 0 ? 'Continue Writing' : 'Edit Article' }}
             </button>
+
+            @if(selectedTab() === 1) {
+            <button mat-button (click)="viewArticle(article, $event)">
+              <mat-icon>visibility</mat-icon>
+              View Article
+            </button>
+            }
           </div>
         </div>
       </div>
