--- a/src/app/pages/articles-list/articles-list.component.scss
+++ b/src/app/pages/articles-list/articles-list.component.scss
@@ -44,6 +44,7 @@
     align-items: center;
     gap: 16px;
     flex-wrap: wrap;
+    margin-top: 24px;
 
     .filter-label {
       font-weight: 500;
@@ -261,16 +262,16 @@
       opacity: 1;
     }
 
-    .article-summary {
-      color: var(--mat-sys-on-surface-variant);
-      line-height: 1.5;
-      margin: 0;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-    }
+    // .article-summary {
+    //   color: var(--mat-sys-on-surface-variant);
+    //   line-height: 1.5;
+    //   margin: 0;
+    //   display: -webkit-box;
+    //   -webkit-line-clamp: 2;
+    //   line-clamp: 2;
+    //   -webkit-box-orient: vertical;
+    //   overflow: hidden;
+    // }
 
     .article-tags {
       mat-chip-set {
