--- a/src/app/components/apps-menu/apps-menu.component.html
+++ b/src/app/components/apps-menu/apps-menu.component.html
@@ -44,6 +44,20 @@
       </div>
     </div>
 
+    <div class="menu-section">
+      <h3 class="section-title">AI</h3>
+      <div class="menu-grid">
+        @for (item of aiItems; track item.label) {
+        <button class="menu-item" (click)="onItemClick(item)">
+          <div class="menu-item-icon">
+            <mat-icon>{{ item.icon }}</mat-icon>
+          </div>
+          <span class="menu-item-label">{{ item.label }}</span>
+        </button>
+        }
+      </div>
+    </div>
+
     @if (getMoreItems().length > 0) {
     <div class="menu-section">
       <h3 class="section-title">More</h3>
