--- a/src/app/pages/ai/ai.scss
+++ b/src/app/pages/ai/ai.scss
@@ -11,6 +11,13 @@
   margin-bottom: 30px;
 }
 
+mat-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .playground-section {
   margin-top: 30px;
 }
