--- a/src/app/components/article-editor-dialog/article-editor-dialog.component.html
+++ b/src/app/components/article-editor-dialog/article-editor-dialog.component.html
@@ -36,9 +36,23 @@
           }
         </div>
         <div class="right-buttons">
-          <button mat-icon-button (click)="openAiDialog()" matTooltip="AI Tools">
+          <button mat-icon-button [matMenuTriggerFor]="aiMenu" matTooltip="AI Tools">
             <mat-icon>psychology</mat-icon>
           </button>
+          <mat-menu #aiMenu="matMenu">
+            <button mat-menu-item (click)="openAiDialog('generate')">
+              <mat-icon>auto_awesome</mat-icon>
+              <span>Generate Text</span>
+            </button>
+            <button mat-menu-item (click)="openAiDialog('translate')">
+              <mat-icon>translate</mat-icon>
+              <span>Translate</span>
+            </button>
+            <button mat-menu-item (click)="openAiDialog('sentiment')">
+              <mat-icon>mood</mat-icon>
+              <span>Sentiment Analysis</span>
+            </button>
+          </mat-menu>
           <button mat-icon-button (click)="togglePreview()" [matTooltip]="showPreview() ? 'Edit' : 'Preview'"
             [class.active]="showPreview()">
             <mat-icon>{{ showPreview() ? 'visibility_off' : 'visibility' }}</mat-icon>
