--- a/src/app/components/note-editor-dialog/note-editor-dialog.component.html
+++ b/src/app/components/note-editor-dialog/note-editor-dialog.component.html
@@ -293,11 +293,25 @@
         matTooltip="Toggle preview">
         <mat-icon>{{ showPreview() ? 'visibility_off' : 'visibility' }}</mat-icon>
       </button>
-      <button mat-icon-button type="button" (click)="openAiDialog()"
+      <button mat-icon-button type="button" [matMenuTriggerFor]="aiMenu"
         [disabled]="isUploading() || isPublishing() || showPreview() || showAdvancedOptions()"
         [class.button-disabled-visible]="showPreview() || showAdvancedOptions()" matTooltip="AI Tools">
         <mat-icon>psychology</mat-icon>
       </button>
+      <mat-menu #aiMenu="matMenu">
+        <button mat-menu-item (click)="openAiDialog('generate')">
+          <mat-icon>auto_awesome</mat-icon>
+          <span>Generate Text</span>
+        </button>
+        <button mat-menu-item (click)="openAiDialog('translate')">
+          <mat-icon>translate</mat-icon>
+          <span>Translate</span>
+        </button>
+        <button mat-menu-item (click)="openAiDialog('sentiment')">
+          <mat-icon>mood</mat-icon>
+          <span>Sentiment Analysis</span>
+        </button>
+      </mat-menu>
       <button mat-icon-button type="button" (click)="openFileDialog()"
         [disabled]="isUploading() || isPublishing() || showPreview() || showAdvancedOptions()"
         [class.button-disabled-visible]="showPreview() || showAdvancedOptions()" matTooltip="Upload image">
