--- a/src/app/components/article-editor-dialog/article-editor-dialog.component.html
+++ b/src/app/components/article-editor-dialog/article-editor-dialog.component.html
@@ -53,6 +53,16 @@
               <span>Sentiment Analysis</span>
             </button>
           </mat-menu>
+          <button mat-icon-button type="button" (click)="toggleRecording()"
+            [color]="isRecording() ? 'warn' : ''"
+            [disabled]="isPublishing() || showPreview() || isTranscribing()"
+            matTooltip="Dictate content">
+            @if (isTranscribing()) {
+              <mat-icon class="spinning">sync</mat-icon>
+            } @else {
+              <mat-icon>mic</mat-icon>
+            }
+          </button>
           <button mat-icon-button (click)="togglePreview()" [matTooltip]="showPreview() ? 'Edit' : 'Preview'"
             [class.active]="showPreview()">
             <mat-icon>{{ showPreview() ? 'visibility_off' : 'visibility' }}</mat-icon>
