--- a/src/app/components/note-editor-dialog/note-editor-dialog.component.html
+++ b/src/app/components/note-editor-dialog/note-editor-dialog.component.html
@@ -312,6 +312,16 @@
           <span>Sentiment Analysis</span>
         </button>
       </mat-menu>
+      <button mat-icon-button type="button" (click)="toggleRecording()"
+        [color]="isRecording() ? 'warn' : ''"
+        [disabled]="isUploading() || isPublishing() || showPreview() || showAdvancedOptions() || isTranscribing()"
+        matTooltip="Dictate note">
+        @if (isTranscribing()) {
+          <mat-icon class="spinning">sync</mat-icon>
+        } @else {
+          <mat-icon>mic</mat-icon>
+        }
+      </button>
       <button mat-icon-button type="button" (click)="openFileDialog()"
         [disabled]="isUploading() || isPublishing() || showPreview() || showAdvancedOptions()"
         [class.button-disabled-visible]="showPreview() || showAdvancedOptions()" matTooltip="Upload image">
