fix(ai-tools): disable 'Generate Text' option in AI tools due to temporary unavailability

--- a/src/app/components/article-editor-dialog/article-editor-dialog.component.html
+++ b/src/app/components/article-editor-dialog/article-editor-dialog.component.html
@@ -40,7 +40,7 @@
             <mat-icon>psychology</mat-icon>
           </button>
           <mat-menu #aiMenu="matMenu">
-            <button mat-menu-item (click)="openAiDialog('generate')">
+            <button mat-menu-item (click)="openAiDialog('generate')" disabled matTooltip="Temporarily disabled">
               <mat-icon>auto_awesome</mat-icon>
               <span>Generate Text</span>
             </button>
