--- a/src/app/components/note-editor-dialog/note-editor-dialog.component.html
+++ b/src/app/components/note-editor-dialog/note-editor-dialog.component.html
@@ -299,7 +299,7 @@
         <mat-icon>psychology</mat-icon>
       </button>
       <mat-menu #aiMenu="matMenu">
-        <button mat-menu-item (click)="openAiDialog('generate')">
+        <button mat-menu-item (click)="openAiDialog('generate')" disabled matTooltip="Temporarily disabled">
           <mat-icon>auto_awesome</mat-icon>
           <span>Generate Text</span>
         </button>
