feat(article-display): add loading spinner and disable button during speech synthesis

--- a/src/app/components/article-display/article-display.component.html
+++ b/src/app/components/article-display/article-display.component.html
@@ -48,8 +48,13 @@
           </mat-menu>
 
           @if (!isSpeaking()) {
-          <button mat-icon-button color="primary" (click)="startSpeech.emit()" title="Read article aloud">
+          <button mat-icon-button color="primary" (click)="startSpeech.emit()" title="Read article aloud"
+            [disabled]="isSynthesizing()">
+            @if (isSynthesizing()) {
+            <mat-progress-spinner mode="indeterminate" diameter="24"></mat-progress-spinner>
+            } @else {
             <mat-icon>volume_up</mat-icon>
+            }
           </button>
           } @else {
           @if (isPaused()) {
