--- a/src/app/components/article-display/article-display.component.html
+++ b/src/app/components/article-display/article-display.component.html
@@ -37,6 +37,14 @@
         <!-- Text-to-Speech Controls (Header) - only in full mode -->
         @if (mode() === 'full') {
         <div class="article-tts-controls">
+          <button mat-icon-button (click)="translate.emit()" title="Translate Article" [disabled]="isTranslating()">
+            @if (isTranslating()) {
+            <mat-progress-spinner mode="indeterminate" diameter="24"></mat-progress-spinner>
+            } @else {
+            <mat-icon>translate</mat-icon>
+            }
+          </button>
+
           <button mat-icon-button [matMenuTriggerFor]="voiceMenu" matTooltip="Voice Settings">
             <mat-icon>settings_voice</mat-icon>
           </button>
