--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -292,7 +292,7 @@
       </p>
 
       <div class="actions">
-        <a mat-flat-button color="primary" [href]="getExternalSignerUrl()" target="_blank" rel="noopener noreferrer">
+        <a mat-flat-button color="primary" [href]="safeExternalSignerUrl">
           <mat-icon>open_in_new</mat-icon>
           Open Signer App
         </a>
